# erdbeerkaese-one-feed

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker.yml
